--- a/packages/energy/geysers/geysers.yaml
+++ b/packages/energy/geysers/geysers.yaml
@@ -25,20 +25,16 @@ timer:
     duration: "02:00:00"
     restore: true
 
-sensor:
-  - platform: template
-    sensors:
-      # Template sensor to display input value only
-      geyser_morning_runtime:
-        friendly_name: "Geyser Morning run-time"
-        unit_of_measurement: "minutes"
-        icon_template: "mdi:timer-outline"
-        value_template: >-
-          {% set average_temp_int = states('sensor.average_temperature_outside_last_1_day')|int %}
-          {% if average_temp_int >= 20 %}120
-          {% elif average_temp_int >= 18 and average_temp_int < 20 %}150
-          {% elif average_temp_int >= 12 and average_temp_int < 18 %}150
-          {% else %}180{% endif -%}
+template:
+  - sensor:
+    - unit_of_measurement: minutes
+      default_entity_id: sensor.geyser_morning_runtime
+      icon: mdi:timer-outline
+      name: Geyser Morning run-time
+      state: '{% set average_temp_int = states(''sensor.average_temperature_outside_last_1_day'')|int
+        %} {% if average_temp_int >= 20 %}120 {% elif average_temp_int >= 18 and average_temp_int
+        < 20 %}150 {% elif average_temp_int >= 12 and average_temp_int < 18 %}150 {%
+        else %}180{% endif -%}'
 
 script:
   ######################################################################
