--- a/packages/notifications/baby_door_notification.yaml
+++ b/packages/notifications/baby_door_notification.yaml
@@ -4,9 +4,16 @@ template:
   - unique_id: baby_room_door_closed_long
     default_entity_id: binary_sensor.baby_room_door_closed_long
     name: Baby room door closed long
-    state: '{% if states.binary_sensor.baby_room_door_contact.state == ''off'' %}
-      {% if (as_timestamp(now()) - as_timestamp(states.binary_sensor.baby_room_door_contact.last_changed))/60
-      > 30 %} off {% else %} on {% endif %} {% else %} on {% endif %}'
+    state: >-
+      {% if states.binary_sensor.baby_room_door_contact.state == 'off' %}
+      {% if (as_timestamp(now()) - as_timestamp(states.binary_sensor.baby_room_door_contact.last_changed))/60 > 30 %}
+      off
+      {% else %}
+      on
+      {% endif %}
+      {% else %}
+      on
+      {% endif %}
 
 automation:
   ### Notify baby room door opened after closed for long
