template sensors round 2 fix

--- a/packages/energy/geysers/geysers.yaml
+++ b/packages/energy/geysers/geysers.yaml
@@ -31,10 +31,12 @@ template:
       default_entity_id: sensor.geyser_morning_runtime
       icon: mdi:timer-outline
       name: Geyser Morning run-time
-      state: '{% set average_temp_int = states(''sensor.average_temperature_outside_last_1_day'')|int
-        %} {% if average_temp_int >= 20 %}120 {% elif average_temp_int >= 18 and average_temp_int
-        < 20 %}150 {% elif average_temp_int >= 12 and average_temp_int < 18 %}150 {%
-        else %}180{% endif -%}'
+      state:  >-
+        {% set average_temp_int = states('sensor.average_temperature_outside_last_1_day')|int %}
+        {% if average_temp_int >= 20 %}120
+        {% elif average_temp_int >= 18 and average_temp_int < 20 %}150
+        {% elif average_temp_int >= 12 and average_temp_int < 18 %}150
+        {% else %}180{% endif -%}
 
 script:
   ######################################################################
