--- a/packages/security/cover_garage_doors.yaml
+++ b/packages/security/cover_garage_doors.yaml
@@ -16,8 +16,12 @@ template:
           entity_id: switch.garagedoor_front_garagedoor_front
         action: switch.turn_on
       default_entity_id: cover.garage_door_front
-      icon: "{% if is_state('binary_sensor.front_garage_door_window', 'on') %}\n  mdi:garage-open\n{%
-        else %}\n  mdi:garage\n{% endif %}"
+      icon: >-
+        {% if is_state('binary_sensor.front_garage_door_window', 'on') %}
+          mdi:garage-open
+        {% else %}
+          mdi:garage
+        {% endif %}
       name: Garage Door Front
       position: '{{ is_state(''binary_sensor.front_garage_door_window'', ''on'') }}'
   # Back Garage Door
@@ -36,8 +40,12 @@ template:
           entity_id: switch.garagedoor_back_garagedoor_back
         action: switch.turn_on
       default_entity_id: cover.garage_door_back
-      icon: "{% if is_state('binary_sensor.back_garage_door', 'on') %}\n  mdi:garage-open\n{%
-        else %}\n  mdi:garage\n{% endif %}"
+      icon: >-
+        {% if is_state('binary_sensor.back_garage_door', 'on') %}
+          mdi:garage-open
+        {% else %}
+          mdi:garage
+        {% endif %}
       name: Garage Door Back
       position: '{{ is_state(''binary_sensor.back_garage_door'', ''on'') }}'
   
